[package]
name = "p2p-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
p2p-lib = { path = "../p2p-lib" }
ed25519-dalek = { version = "2.2.0", features = ["pem", "rand_core"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
rand = "0.8.6"
serde = { version = "1.0.228", features = ["serde_derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
