[package]
name = "p2p-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
p2p-lib = { workspace = true }
ed25519-dalek = { workspace = true }
figment = { version = "0.10.19", features = ["toml", "env"] }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
